--- a/app/src/main/res/layout/pin_entry.xml
+++ b/app/src/main/res/layout/pin_entry.xml
@@ -2,10 +2,11 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pinEntry"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:background="#9000"
+    android:background="@color/dialogBackground"
     android:onClick="onClick">
 
     <android.support.constraint.ConstraintLayout
