--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="textWarning">#ff93</color>
     <color name="textPositive">#f180</color>
     <color name="heading">#f666</color>
+    <color name="dialogBackground">#9000</color>
 </resources>
