--- a/app/src/main/res/layout-w360dp/send_payment.xml
+++ b/app/src/main/res/layout-w360dp/send_payment.xml
@@ -7,18 +7,37 @@
     android:layout_margin="10dp"
     android:animateLayoutChanges="true">
 
-    <TextView
-        android:id="@+id/title"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        style="@style/HeadingText"/>
+        android:layout_marginTop="10dp">
 
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/SmallHeadingText"/>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            style="@style/HeadingText"/>
+
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/title"
+            style="@style/SmallHeadingText"/>
+
+        <tech.nextcash.nextcashwallet.TextButton
+            android:id="@+id/saveAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            style="@style/SmallButton"
+            android:text="@string/save"/>
+
+    </RelativeLayout>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -167,7 +186,7 @@
 
         <tech.nextcash.nextcashwallet.TextButton
             android:id="@+id/sendMax"
-            style="@style/Button"
+            style="@style/SmallButton"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
