Update BIP-0070 to support requests with multiple outputs. Rebuild JNI class/field ID caching.

--- a/app/src/main/res/layout/wallet_transaction.xml
+++ b/app/src/main/res/layout/wallet_transaction.xml
@@ -27,15 +27,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/SubHeadingText"
-                android:textAlignment="textEnd"
-                android:text="$10.00"/>
+                android:textAlignment="textEnd"/>
 
             <TextView
                 android:id="@+id/bitcoinAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="textEnd"
-                android:text="0 00 000 000"/>
+                android:textAlignment="textEnd"/>
 
         </LinearLayout>
 
@@ -47,8 +45,7 @@
             android:layout_centerVertical="true"
             android:paddingEnd="5dp"
             android:paddingStart="5dp"
-            style="@style/SubHeadingText"
-            android:text="just now"/>
+            style="@style/SubHeadingText"/>
 
         <TextView
             android:id="@+id/count"
@@ -59,17 +56,16 @@
             android:paddingEnd="5dp"
             android:paddingStart="5dp"
             style="@style/SubHeadingText"
-            android:textAlignment="textEnd"
-            android:text="5"/>
+            android:textAlignment="textEnd"/>
 
     </RelativeLayout>
 
     <TextView
         android:id="@+id/comment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textStyle="bold"
-        android:text="comment"/>
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textAlignment="center"/>
 
 </LinearLayout>
