--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorStatusBackground">#fddd</color>
     <color name="colorButton">#f13b</color>
     <color name="colorButtonEnd">#f46d</color>
+    <color name="colorUndoButton">#ffb3</color>
     <color name="buttonText">#ffff</color>
     <color name="colorButtonNegative">#fc32</color>
     <color name="colorButtonNegativeEnd">#fe43</color>
