--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="pin_button_size">45dp</dimen>
     <dimen name="pin_button_text_size">20dp</dimen>
+    <dimen name="small_icon_size">24dp</dimen>
 </resources>
