--- a/app/src/main/res/layout/address_label_item.xml
+++ b/app/src/main/res/layout/address_label_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/addressLabel"
+            android:id="@+id/addressLabelName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
