--- a/app/src/main/res/layout/address_labels.xml
+++ b/app/src/main/res/layout/address_labels.xml
@@ -23,77 +23,20 @@
         android:gravity="center"
         android:textAlignment="center"/>
 
-    <LinearLayout
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        android:text="@string/swipe_to_delete"/>
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/addressLabelItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp">
 
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        style="@style/SmallHeadingText"
-        android:text="@string/add_manual_address_label"/>
-
-    <EditText
-        android:id="@+id/manualAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:imeOptions="actionDone"
-        android:hint="@string/enter_address_hint"/>
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="10dp"
-            style="@style/SmallHeadingText"
-            android:labelFor="@id/manualAddress"
-            android:text="@string/address"/>
-
-    </RelativeLayout>
-
-    <EditText
-        android:id="@+id/manualAddressLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:imeOptions="actionDone"
-        android:hint="@string/enter_address_label_hint"/>
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="10dp"
-            style="@style/SmallHeadingText"
-            android:labelFor="@id/manualAddressLabel"
-            android:text="@string/label"/>
-
-        <tech.nextcash.nextcashwallet.TextButton
-            android:id="@+id/addManualAddressLabel"
-            android:layout_alignParentEnd="true"
-            style="@style/SmallButton"
-            android:text="@string/add"/>
-
-    </RelativeLayout>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
