--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:padding="20dp">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:padding="20dp">
 
     <TextView
         android:id="@+id/receiveTitle"
@@ -22,6 +23,15 @@
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="@string/receive_description"/>
+
+    <TextView
+        android:id="@+id/receiveAddressTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        style="@style/SubHeadingText"
+        android:textAlignment="center"
+        android:visibility="gone"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:onClick="onClick"/>
 
     <LinearLayout
@@ -50,47 +61,35 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/labelEdit"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:inputType="textAutoComplete"
-            android:importantForAutofill="no"
-            android:hint="@string/address_label_hint"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@id/updateAddressLabel"
-                android:text="@string/address_label_description"
-                android:labelFor="@id/labelEdit"/>
+            android:layout_marginTop="10dp">
 
             <tech.nextcash.nextcashwallet.TextButton
-                android:id="@+id/updateAddressLabel"
+                android:id="@+id/addAddressLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/openAddressLabels"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 style="@style/SmallButton"
                 android:onClick="onClick"
-                android:text="@string/update"/>
+                android:text="@string/add_label"/>
 
-        </RelativeLayout>
+            <tech.nextcash.nextcashwallet.ImageButton
+                android:id="@+id/openAddressLabels"
+                android:layout_width="@dimen/image_button_size"
+                android:layout_height="@dimen/image_button_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/addAddressLabel"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                style="@style/SmallButton"
+                android:src="@drawable/baseline_list_white_36dp"/>
 
-        <tech.nextcash.nextcashwallet.TextButton
-            android:id="@+id/openAddressLabels"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Button"
-            android:text="@string/labeled_addresses"/>
+        </android.support.constraint.ConstraintLayout>
 
         <TextView
             android:layout_marginTop="20dp"
@@ -106,137 +105,176 @@
             android:textAlignment="center"
             android:text="@string/optional_description"/>
 
-        <RelativeLayout
-            android:orientation="horizontal"
+        <LinearLayout
+            android:id="@+id/specifiedAmountGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="start">
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
-            <EditText
-                android:id="@+id/requestAmount"
+            <TextView
+                android:id="@+id/amountTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/amount_title"/>
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@id/units"
-                android:hint="@string/request_amount_hint"
-                android:imeOptions="actionDone"/>
+                android:layout_height="wrap_content">
 
-            <Spinner
-                android:id="@+id/units"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"
-                android:entries="@array/amount_units"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/modifyReceiveAmount"
+                    android:layout_centerVertical="true">
 
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/amountValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="$1.00 USD"/>
 
-        <RelativeLayout
-            android:orientation="horizontal"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/satoshiAmountTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:text="@string/bitcoins"
+                            android:textStyle="bold"/>
+
+                        <TextView
+                            android:id="@+id/satoshiAmountValue"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0 00 000 000"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <tech.nextcash.nextcashwallet.TextButton
+                    android:id="@+id/modifyReceiveAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    style="@style/SmallButton"
+                    android:text="@string/modify"/>
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/specifiedLabelGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start">
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <TextView
-                android:id="@+id/satoshiAmountLabel"
+                android:id="@+id/labelTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/amountLabel"
-                android:layout_alignParentStart="true"
-                android:layout_marginEnd="10dp"
-                android:text="@string/bitcoins"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:id="@+id/satoshiAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/amountLabel"
-                android:layout_toEndOf="@+id/satoshiAmountLabel"
-                android:text="0 00 000 000"/>
-
-            <TextView
-                android:id="@+id/amountLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:text="@string/request_amount"
-                style="@style/SmallHeadingText"
-                android:labelFor="@id/requestAmount"/>
-
-            <tech.nextcash.nextcashwallet.TextButton
-                android:layout_alignParentEnd="true"
-                android:id="@+id/updateRequestPaymentCode"
-                style="@style/SmallButton"
-                android:text="@string/update"/>
-
-        </RelativeLayout>
-
-        <EditText
-            android:id="@+id/label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:inputType="text"
-            android:imeOptions="actionDone"
-            android:hint="@string/request_label_hint"/>
-
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginEnd="10dp"
-                style="@style/SmallHeadingText"
+                android:layout_gravity="center_horizontal"
                 android:text="@string/label"/>
 
-            <tech.nextcash.nextcashwallet.TextButton
-                android:layout_alignParentEnd="true"
-                android:id="@id/updateRequestPaymentCode"
-                style="@style/SmallButton"
-                android:text="@string/update"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/labelValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/modifyReceiveLabel"
+                    android:layout_centerVertical="true"
+                    android:textStyle="bold"/>
 
-        </RelativeLayout>
+                <tech.nextcash.nextcashwallet.TextButton
+                    android:id="@+id/modifyReceiveLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    style="@style/SmallButton"
+                    android:text="@string/modify"/>
+            </RelativeLayout>
 
-        <EditText
-            android:id="@+id/message"
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/specifiedMessageGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:inputType="text"
-            android:imeOptions="actionDone"
-            android:hint="@string/request_message_hint"/>
-
-        <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start">
+            android:orientation="vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <TextView
+                android:id="@+id/messageTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginEnd="10dp"
-                style="@style/SmallHeadingText"
+                android:layout_gravity="center_horizontal"
                 android:text="@string/message"/>
 
-            <tech.nextcash.nextcashwallet.TextButton
-                android:layout_alignParentEnd="true"
-                android:id="@id/updateRequestPaymentCode"
-                style="@style/SmallButton"
-                android:text="@string/update"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/messageValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_toStartOf="@id/modifyReceiveMessage"
+                    android:layout_centerVertical="true"
+                    android:textStyle="bold"/>
 
-        </RelativeLayout>
+                <tech.nextcash.nextcashwallet.TextButton
+                    android:id="@+id/modifyReceiveMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    style="@style/SmallButton"
+                    android:text="@string/modify"/>
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <tech.nextcash.nextcashwallet.TextButton
+            android:id="@+id/specifyReceiveAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            style="@style/Button"
+            android:text="@string/specify_amount"/>
+
+        <tech.nextcash.nextcashwallet.TextButton
+            android:id="@+id/specifyReceiveLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            style="@style/Button"
+            android:text="@string/specify_label"/>
+
+        <tech.nextcash.nextcashwallet.TextButton
+            android:id="@+id/specifyReceiveMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            style="@style/Button"
+            android:text="@string/specify_message"/>
 
     </LinearLayout>
 
