--- a/app/src/main/res/layout/clipboard_payment_code.xml
+++ b/app/src/main/res/layout/clipboard_payment_code.xml
@@ -42,8 +42,8 @@
             app:layout_constraintEnd_toStartOf="@id/openAddressBook"
             app:layout_constraintStart_toStartOf="parent"
             style="@style/SmallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/image_button_size"
+            android:layout_height="@dimen/image_button_size"
             android:src="@drawable/ic_scan_white_36dp"
             android:contentDescription="@string/scan"/>
 
@@ -52,8 +52,8 @@
             app:layout_constraintStart_toEndOf="@id/scanPaymentCode"
             app:layout_constraintEnd_toEndOf="parent"
             style="@style/SmallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/image_button_size"
+            android:layout_height="@dimen/image_button_size"
             android:src="@drawable/baseline_list_white_36dp"
             android:contentDescription="@string/address_book"/>
 
