--- a/app/src/main/res/values-w360dp/dimens.xml
+++ b/app/src/main/res/values-w360dp/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="text_size_small">15sp</dimen>
     <dimen name="pin_button_size">60dp</dimen>
     <dimen name="pin_button_text_size">25dp</dimen>
+    <dimen name="small_icon_size">24dp</dimen>
+    <dimen name="image_button_size">50dp</dimen>
+    <dimen name="button_min_width">200dp</dimen>
+    <dimen name="button_padding">10dp</dimen>
 </resources>
