--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,10 +52,10 @@
     <style name="Button" parent="TextAppearance.AppCompat.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">@dimen/button_padding</item>
+        <item name="android:layout_margin">@dimen/button_padding</item>
+        <item name="android:minWidth">@dimen/button_min_width</item>
         <item name="android:background">@drawable/button_background</item>
-        <item name="android:minWidth">200dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
@@ -67,10 +67,7 @@
     <style name="ButtonNegative" parent="TextAppearance.AppCompat.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:layout_margin">10dp</item>
         <item name="android:background">@drawable/negative_button_background</item>
-        <item name="android:minWidth">200dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
@@ -82,9 +79,9 @@
     <style name="PINButton" parent="TextAppearance.AppCompat.Medium">
         <item name="android:layout_width">@dimen/pin_button_size</item>
         <item name="android:layout_height">@dimen/pin_button_size</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:layout_margin">10dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:padding">@dimen/button_padding</item>
+        <item name="android:layout_margin">@dimen/button_padding</item>
         <item name="android:background">@drawable/pin_button_background</item>
         <item name="android:textSize">@dimen/pin_button_text_size</item>
         <item name="android:textStyle">bold</item>
@@ -99,7 +96,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">0dp</item>
         <item name="android:minHeight">0dp</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:background">@drawable/button_background</item>
         <item name="android:layout_gravity">center_horizontal</item>
@@ -110,23 +110,9 @@
         <item name="android:onClick">onClick</item>
     </style>
 
-    <style name="UndoButton" parent="TextAppearance.AppCompat.Medium">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">0dp</item>
-        <item name="android:padding">5dp</item>
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_marginEnd">5dp</item>
-        <item name="android:layout_marginStart">5dp</item>
+    <style name="UndoButton" parent="SmallButton">
         <item name="android:layout_marginBottom">40dp</item>
         <item name="android:background">@drawable/undo_button_background</item>
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/buttonText</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:onClick">onClick</item>
     </style>
 
 </resources>
