--- a/app/src/main/res/layout-w360dp/send_payment.xml
+++ b/app/src/main/res/layout-w360dp/send_payment.xml
@@ -291,6 +291,6 @@
     <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/sendPayment"
         style="@style/Button"
-        android:text="@string/continue_string"/>
+        android:text="@string/authorize"/>
 
 </LinearLayout>
