--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,6 +55,7 @@
         <item name="android:padding">@dimen/button_padding</item>
         <item name="android:layout_margin">@dimen/button_padding</item>
         <item name="android:minWidth">@dimen/button_min_width</item>
+        <item name="android:minHeight">@dimen/image_button_size</item>
         <item name="android:background">@drawable/button_background</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
@@ -67,6 +68,7 @@
     <style name="ButtonNegative" parent="TextAppearance.AppCompat.Medium">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/image_button_size</item>
         <item name="android:background">@drawable/negative_button_background</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
@@ -95,7 +97,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">0dp</item>
+        <item name="android:minHeight">@dimen/image_button_size</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:paddingStart">10dp</item>
