--- a/app/src/main/res/layout/instructions.xml
+++ b/app/src/main/res/layout/instructions.xml
@@ -188,4 +188,30 @@
             android:text="@string/history_instructions"/>
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        style="@style/SubHeadingText"
+        android:text="@string/address_book"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/address_book_instruction"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        style="@style/SubHeadingText"
+        android:text="@string/address_labels"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/address_labels_instruction"/>
+
 </LinearLayout>
