Add button animations.

--- a/app/src/main/res/layout/add_wallet.xml
+++ b/app/src/main/res/layout/add_wallet.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:animateLayoutChanges="true">
 
     <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/createWallet"
