--- a/app/src/main/res/drawable/message_background.xml
+++ b/app/src/main/res/drawable/message_background.xml
@@ -3,5 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/messageBackground" />
-    <stroke android:width="2dp" android:color="#f000" />
+    <stroke android:width="2dp" android:color="@color/colorNotification" />
+    <corners android:radius="3dp"/>
 </shape>
