--- a/app/src/main/res/layout/address_labels.xml
+++ b/app/src/main/res/layout/address_labels.xml
@@ -40,7 +40,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/addressLabelItems"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp">
 
     </android.support.v7.widget.RecyclerView>
