--- a/app/src/main/res/layout/import_bip32_key.xml
+++ b/app/src/main/res/layout/import_bip32_key.xml
@@ -36,7 +36,8 @@
             android:id="@+id/derivationMethodSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:entries="@array/derivation_methods"/>
 
     </LinearLayout>
 
