--- a/app/src/main/res/layout/persistent_message.xml
+++ b/app/src/main/res/layout/persistent_message.xml
@@ -15,8 +15,7 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@id/closeMessage"
         android:padding="10dp"
-        android:textColor="@color/messageText"
-        android:text="Your BitPay invoice has been marked as paid."/>
+        android:textColor="@color/messageText"/>
 
     <ImageView
         android:id="@+id/closeMessage"
