--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,17 +65,8 @@
         <item name="android:onClick">onClick</item>
     </style>
 
-    <style name="ButtonNegative" parent="TextAppearance.AppCompat.Medium">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">@dimen/image_button_size</item>
+    <style name="ButtonNegative" parent="Button">
         <item name="android:background">@drawable/negative_button_background</item>
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/buttonText</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:onClick">onClick</item>
     </style>
 
     <style name="PINButton" parent="TextAppearance.AppCompat.Medium">
